--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 </head>
 <body>
     <h1>RETIGIS</h1>
-    <div id="map"></div>
+    <div class="container">
+        <div id="layers-panel">
+            <h3>Layers</h3>
+            <input type="text" id="search-bar" placeholder="Search layers...">
+            <div id="layers-list"></div>
+        </div>
+        <div id="map"></div>
+    </div>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="script.js"></script>
 </body>
