--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
         <div id="layers-panel">
             <h3>Layers</h3>
             <input type="text" id="search-bar" placeholder="Search layers...">
+            <select id="sort-select">
+                <option value="name-asc">Name (A-Z)</option>
+                <option value="name-desc">Name (Z-A)</option>
+                <option value="workspace">Group by Workspace</option>
+                <option value="active">Active First</option>
+                <option value="recent">Recently Added</option>
+            </select>
             <div id="layers-list"></div>
         </div>
         <div id="map"></div>
