feat(layers): add "Active First" toggle and update sorting functionality

--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
                 <option value="name-asc">Name (A-Z)</option>
                 <option value="name-desc">Name (Z-A)</option>
                 <option value="workspace">Group by Workspace</option>
-                <option value="active">Active First</option>
                 <option value="recent">Recently Added</option>
             </select>
+            <div class="sort-options">
+                <label class="toggle-label">
+                    <input type="checkbox" id="active-first-toggle">
+                    Active First
+                </label>
+            </div>
             <div id="layers-list"></div>
         </div>
         <div id="map"></div>
