added layer attributes panel and functionality to view attributes

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
                     <div id="no-selection">Click on a feature to view its attributes</div>
                 </div>
             </div>
+            <div id="layer-attributes-panel">
+                <div id="layer-attributes-header">
+                    <h3>Layer Attributes</h3>
+                    <button id="close-layer-attributes">×</button>
+                </div>
+                <div id="layer-attributes-content">
+                    <div id="no-layer-selection">Select a layer to view its attribute table</div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
