--- a/index.html
+++ b/index.html
@@ -26,19 +26,16 @@
         </div>
         <div id="main-content">
             <div id="map"></div>
-            <div id="attributes-panel">
-                <div id="attributes-header">
-                    <h3>Feature Attributes</h3>
-                    <button id="close-attributes">×</button>
-                </div>
-                <div id="attributes-content">
-                    <div id="no-selection">Click on a feature to view its attributes</div>
-                </div>
-            </div>
             <div id="layer-attributes-panel">
                 <div id="layer-attributes-header">
                     <h3>Layer Attributes</h3>
-                    <button id="close-layer-attributes">×</button>
+                    <div id="layer-attributes-controls">
+                        <label class="toggle-label">
+                            <input type="checkbox" id="selected-first-toggle">
+                            Selected First
+                        </label>
+                        <button id="close-layer-attributes">×</button>
+                    </div>
                 </div>
                 <div id="layer-attributes-content">
                     <div id="no-layer-selection">Select a layer to view its attribute table</div>
