add search functionality and improve UI for attribute table

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <div id="layer-attributes-header">
                     <h3>Layer Attributes</h3>
                     <div id="layer-attributes-controls">
+                        <input type="text" id="attribute-search" placeholder="Search attributes..." style="display: none;">
                         <label class="toggle-label">
                             <input type="checkbox" id="selected-first-toggle">
                             Selected First
